<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/White"
    tools:context=".MainActivity" >

    <ListView
        android:id="@+id/listViewCard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linearLayout2"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/barra_texto"
            android:padding="5dp"
            android:text="@string/txt_name"
            android:textColor="@color/WhiteSmoke" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/barra_texto"
            android:padding="5dp"
            android:text="@string/txt_begin_date"
            android:textColor="@color/WhiteSmoke" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/barra_texto"
            android:padding="5dp"
            android:text="@string/txt_end_date"
            android:textColor="@color/WhiteSmoke" />
    </LinearLayout>

</RelativeLayout>